Changed the order of .left and .right for profile#1#2#3. Fixed minor spacing issues.

--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -806,11 +806,6 @@ iframe {
   font-size: clamp(1.3rem, 0.6rem + 1.25vw, 1.8rem);
 }
 
-/* #form-presentation {
-  text-align: center;
-  font-size: 1.6em;
-} */
-
 #email-link {
   color: var(--shark-black);
   text-decoration: underline;
@@ -1212,4 +1207,24 @@ textarea.invalid + .input-error-message {
   #inspiration {
     margin-top: 4em;
   }
+}
+
+@media (max-width: 480px) {
+  #form {
+    width: 95%;
+  }
+}
+
+@media (max-width: 375px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+  }
+
+  #form {
+    width: 100%;
+  }
+}
+
+figure a:active {
+  color: #ff0000;
 }
